# claude-govee-skills

./: .env.example  .gitignore  README.md  SKILL.md  find_ip.py  govee.py  pyproject.toml
govee-control/: SKILL.md
govee-control/scripts/: govee_lan.py
govee-discovery/: SKILL.md
govee-discovery/scripts/: discover.py  find_ip.py
govee-pattern-creator/: MATH_PATTERNS.md  SKILL.md
govee-pattern-creator/scripts/: generate_pattern.py  pattern_engine.py
govee-patterns/: PATTERNS.md  SKILL.md
govee-patterns/scripts/: pattern_demo.py
